--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       </div>
       <div class="border"></div>
       <div id="middle_content">
-        <h1>Skills</h1>
-        <ul>
+        <h1 class="big_title">Skills</h1>
+        <ul class="list">
           <li></li>
-          <li>
-            <h3>HTML/CSS</h3>
+          <li style="background: rgb(230, 230, 230) none repeat scroll 0% 0%;">
+            <h3 class="title">HTML/CSS</h3>
             <p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut aliquip.
 
               Lorem ipsum dolor sit amet
@@ -32,31 +32,13 @@
           </p>
           </li>
           <li>
-            <h3>PHP5 & MySQL</h3>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut aliquip. </p>
+            <h3 class="title">PHP5 &amp; MySQL</h3>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut aliquip.</p>
           </li>
-            <h3>HTML/CSS</h3>
-            <p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut aliquip.
-
-              Lorem ipsum dolor sit amet
-              Consectetuer adipiscing elit
-              Sed diam nonummy nibh euismod tincidunt
-              laoreet dolore magna aliquam erat volutpat
-            </p>
+          <li style="background: rgb(230, 230, 230) none repeat scroll 0% 0%;">
+            <h3 class="title">JAVASCRIPT &amp; jQuery ( Javascript framework ) </h3>
+            <p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut aliquip.</p>
         </li>
-        <li>
-          <h3>PHP5 & MySQL</h3>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut aliquip. </p>
-        </li>
-          <h3>HTML/CSS</h3>
-          <p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut aliquip.
-
-            Lorem ipsum dolor sit amet
-            Consectetuer adipiscing elit
-            Sed diam nonummy nibh euismod tincidunt
-            laoreet dolore magna aliquam erat volutpat
-          </p>
-      </li>
         </ul>
 
       </div>
