--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
       <div id="top_content">
         <div id="picture">
           <img src="img/photo_profile.jpg"/>
-        </div>
+          </div>
           <div id="resume-top">
-            <h1>Hurbain Jessy</h1>
-            <h2><i>Developpeur Web / Mobile</i></h2>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut aliquip. </p>
+            <h1 class="big_title">Hurbain Jessy</h1>
+            <h2 class="title"><i>Developpeur Web / Mobile</i></h2>
+            <p class="description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut aliquip. </p>
         </div>
       </div>
       <div class="border"></div>
@@ -21,9 +21,9 @@
         <h1 class="big_title">Skills</h1>
         <ul class="list">
           <li></li>
-          <li style="background: rgb(230, 230, 230) none repeat scroll 0% 0%;">
-            <h3 class="title">HTML/CSS</h3>
-            <p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut aliquip.
+          <li class="cadre">
+            <p class="title">HTML/CSS <span class="box_exp">dev</span></p>
+            <p class="description"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut aliquip.
 
               Lorem ipsum dolor sit amet
               Consectetuer adipiscing elit
@@ -32,15 +32,24 @@
           </p>
           </li>
           <li>
-            <h3 class="title">PHP5 &amp; MySQL</h3>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut aliquip.</p>
+            <p class="title">PHP5 &amp; MySQL<span class="box_exp">dev</span></p>
+            <p class="description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut aliquip.</p>
           </li>
-          <li style="background: rgb(230, 230, 230) none repeat scroll 0% 0%;">
-            <h3 class="title">JAVASCRIPT &amp; jQuery ( Javascript framework ) </h3>
-            <p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut aliquip.</p>
-        </li>
+          <li class="cadre">
+            <p class="title">JAVASCRIPT &amp; jQuery ( Javascript framework )<span class="box_exp">dev</span> </p>
+            <p class="description"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut aliquip.</p>
+          </li>
         </ul>
-
+          <h1 class="big_title">Contact me</h1>
+          <ul class="list">
+            <li class="cadre">
+                <img class="icon_contact" src="img/sociaux/32-facebook.png"/>
+                <img class="icon_contact" src="img/sociaux/32-linkedin.png"/>
+                <img class="icon_contact" src="img/sociaux/32-skype.png"/>
+                <img class="icon_contact" src="img/sociaux/32-twitter.png"/>
+                <img class="icon_contact" src="img/sociaux/32-youtube.png"/>
+            </li>
+          </ul>
       </div>
 
     </div>
