--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <link href="style.css" type="text/css" rel="stylesheet">
+    <script type="text/javascript" src="js/main.js"></script>
+
   </head>
   <body>
     <div id="main">
@@ -14,10 +16,12 @@
             <h1 class="big_title">Hurbain Jessy</h1>
             <h2 class="title"><i>Developpeur Web / Mobile</i></h2>
             <p class="description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut aliquip. </p>
+            <span class="bouton" id="bouton_texte" onclick="javascript:afficher_cacher('texte');">Afficher le texte</span>
         </div>
       </div>
       <div class="border"></div>
       <div id="middle_content">
+        <div id="texte" class="texte">
         <h1 class="big_title">Skills</h1>
         <ul class="list">
           <li></li>
@@ -39,7 +43,7 @@
             <p class="title">JAVASCRIPT &amp; jQuery ( Javascript framework )<span class="box_exp">dev</span> </p>
             <p class="description"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut aliquip.</p>
           </li>
-        </ul>
+        </ul></div>
           <h1 class="big_title">Contact me</h1>
           <ul class="list">
             <li class="cadre">
@@ -50,8 +54,8 @@
                 <img class="icon_contact" src="img/sociaux/32-youtube.png"/>
             </li>
           </ul>
-      </div>
-
+        </div>
     </div>
+
   </body>
 </html>
