--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
             <p class="title">JAVASCRIPT &amp; jQuery ( Javascript framework )<span class="box_exp">dev</span> </p>
             <p class="description"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut aliquip.</p>
           </li>
-        </ul></div>
+        </ul>
+      </div>
+      <div id="bottom-content">
           <h1 class="big_title">Contact me</h1>
           <ul class="list">
             <li class="cadre">
@@ -55,6 +57,7 @@
             </li>
           </ul>
         </div>
+      </div>
     </div>
 
   </body>
