--- a/index.html
+++ b/index.html
@@ -1,64 +1,156 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link href="style.css" type="text/css" rel="stylesheet">
-    <script type="text/javascript" src="js/main.js"></script>
 
-  </head>
-  <body>
-    <div id="main">
-      <div id="top_content">
-        <div id="picture">
-          <img src="img/photo_profile.jpg"/>
-          </div>
-          <div id="resume-top">
-            <h1 class="big_title">Hurbain Jessy</h1>
-            <h2 class="title"><i>Developpeur Web / Mobile</i></h2>
-            <p class="description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut aliquip. </p>
-            <span class="bouton" id="bouton_texte" onclick="javascript:afficher_cacher('texte');">Afficher le texte</span>
-        </div>
+<head>
+  <meta charset="utf-8">
+  <link href="style.css" type="text/css" rel="stylesheet">
+  <script type="text/javascript" src="js/main.js"></script>
+</head>
+
+<body>
+  <div id="main">
+    <div id="top_content">
+      <div id="picture">
+        <img src="img/photo_profile.jpg" />
       </div>
-      <div class="border"></div>
-      <div id="middle_content">
-        <div id="texte" class="texte">
+      <div id="resume-top">
+        <h1 class="big_title">Hurbain Jessy</h1>
+        <h2 class="title"><i>Développeur Web / Mobile</i></h2>
+        <p class="description">Passioné par les technologie du web et mobiles venez découvrir mes experiences</p>
+        <p> Adresse : 111 Rue Robespierre, Méricourt 62680 </p>
+        <p>Email: Jessyhurbain[@]gmail.com</p>
+        <p>Tél : 06.38.35.78.63</p>
+        <nav class="navigation">
+          <span class="bouton" id="bouton_texte" onclick="javascript:afficher_cacher('home');">Home</span>
+          <span class="bouton" id="bouton_texte" onclick="javascript:afficher_cacher('texte');">Skills</span>
+          <span class="bouton" id="bouton_texte" onclick="javascript:afficher_cacher('texte2');">Formation</span>
+          <span class="bouton" id="bouton_texte" onclick="javascript:afficher_cacher('texte3');">Expériences</span>
+        </nav>
+      </div>
+      <div id="home" class="home">
+      </div>
+    </div>
+    <div class="border"></div>
+    <div id="middle_content">
+      <div id="texte" class="texte">
         <h1 class="big_title">Skills</h1>
         <ul class="list">
-          <li></li>
           <li class="cadre">
-            <p class="title">HTML/CSS <span class="box_exp">dev</span></p>
-            <p class="description"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut aliquip.
-
-              Lorem ipsum dolor sit amet
-              Consectetuer adipiscing elit
-              Sed diam nonummy nibh euismod tincidunt
-              laoreet dolore magna aliquam erat volutpat
-          </p>
+            <p class="title">HTML/CSS
+              <span class="box_exp">dev</span>
+            </p>
+            <p class="description"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut
+              aliquip. Lorem ipsum dolor sit amet Consectetuer adipiscing elit Sed diam nonummy nibh euismod tincidunt laoreet dolore magna aliquam erat volutpat
+            </p>
           </li>
           <li>
-            <p class="title">PHP5 &amp; MySQL<span class="box_exp">dev</span></p>
-            <p class="description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut aliquip.</p>
+            <p class="title">PHP5 &amp; MySQL
+              <span class="box_exp">dev</span>
+            </p>
+            <p class="description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut
+              aliquip.
+            </p>
           </li>
           <li class="cadre">
-            <p class="title">JAVASCRIPT &amp; jQuery ( Javascript framework )<span class="box_exp">dev</span> </p>
-            <p class="description"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut aliquip.</p>
+            <p class="title">JAVASCRIPT &amp; jQuery ( Javascript framework )
+              <span class="box_exp">dev</span>
+            </p>
+            <p class="description"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut
+              aliquip.
+            </p>
+          </li>
+        </ul>
+      </div>
+      <div id="texte2" class="texte2">
+        <h1 class="big_title">Formation</h1>
+        <ul class="list">
+          <li class="cadre">
+            <p class="title">CAP Construction Maçonnerie Béton Armé
+              <span class="box_exp">2008 - 2009</span>
+            </p>
+            <p class="description"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut
+              aliquip. Lorem ipsum dolor sit amet Consectetuer adipiscing elit Sed diam nonummy nibh euismod tincidunt laoreet dolore magna aliquam erat volutpat
+            </p>
+          </li>
+          <li>
+            <p class="title">BEP Maintenance des Systèmes Mécaniques et automatisés (Niveau)
+              <span class="box_exp">2007</span>
+            </p>
+            <p class="description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut
+              aliquip.
+            </p>
+          </li>
+          <li class="cadre">
+            <p class="title">Pop School (Développeur Web &amp; Mobile )
+              <span class="box_exp">2015 - 2016</span>
+            </p>
+            <p class="description"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut
+              aliquip.
+            </p>
+          </li>
+        </ul>
+      </div>
+      <div id="texte3" class="texte3">
+        <h1 class="big_title">Expériences Professionnels</h1>
+        <ul class="list">
+          <li class="cadre">
+            <p class="title">Apprenti Carreleur
+              <span class="box_exp">2005</span>
+            </p>
+            <p class="description"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut
+              aliquip. Lorem ipsum dolor sit amet Consectetuer adipiscing elit Sed diam nonummy nibh euismod tincidunt laoreet dolore magna aliquam erat volutpat
+            </p>
+          </li>
+          <li>
+            <p class="title">Ouvrier de maintenance
+              <span class="box_exp">2006</span>
+            </p>
+            <p class="description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut
+              aliquip.
+            </p>
+          </li>
+          <li class="cadre">
+            <p class="title">Maçon
+              <span class="box_exp">2015 - 2016</span>
+            </p>
+            <p class="description"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut
+              aliquip.
+            </p>
+            <li>
+            <p class="title">Gardien d'immeuble
+              <span class="box_exp">2010 - 2012</span>
+            </p>
+            <p class="description"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut
+              aliquip.
+            </p></li>
+            <li class="cadre">
+            <p class="title">Vendageur à la tâche
+              <span class="box_exp"> Saison 2012 &amp; 2013</span>
+            </p>
+            <p class="description"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut
+              aliquip.
+            </p>
+            </li>
           </li>
         </ul>
       </div>
       <div id="bottom-content">
-          <h1 class="big_title">Contact me</h1>
-          <ul class="list">
-            <li class="cadre">
-                <img class="icon_contact" src="img/sociaux/32-facebook.png"/>
-                <img class="icon_contact" src="img/sociaux/32-linkedin.png"/>
-                <img class="icon_contact" src="img/sociaux/32-skype.png"/>
-                <img class="icon_contact" src="img/sociaux/32-twitter.png"/>
-                <img class="icon_contact" src="img/sociaux/32-youtube.png"/>
-            </li>
-          </ul>
-        </div>
+        <h1 class="big_title">Contact me</h1>
+        <ul class="list">
+          <li class="cadre">
+            <a href="https://www.facebook.com/jessy.hurbain">
+              <img class="icon_contact" src="img/sociaux/32-facebook.png" /></a>
+            <a href="https://fr.linkedin.com/in/jessy-hurbain-732a8b107">
+              <img class="icon_contact" src="img/sociaux/32-linkedin.png" /></a>
+            <a href="https://twitter.com/Gamernew">
+              <img class="icon_contact" src="img/sociaux/32-twitter.png"/></a>
+            <a href="https://www.youtube.com/user/GamernewTesteur/">
+              <img class="icon_contact" src="img/sociaux/32-youtube.png" /></a>
+          </li>
+        </ul>
       </div>
     </div>
+  </div>
+</body>
 
-  </body>
 </html>
