--- a/index.html
+++ b/index.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
   <link href="style.css" type="text/css" rel="stylesheet">
   <script type="text/javascript" src="js/main.js"></script>
 </head>
-
 <body>
   <div id="main">
     <div id="top_content">
       <div id="picture">
         <img src="img/photo_profile.jpg" />
       </div>
-      <div id="resume-top">
+      <div id="resume_top">
         <h1 class="big_title">Hurbain Jessy</h1>
-        <h2 class="title"><i>Développeur Web / Mobile</i></h2>
-        <p class="description">Passioné par les technologie du web et mobiles venez découvrir mes experiences</p>
-        <p> Adresse : 111 Rue Robespierre, Méricourt 62680 </p>
-        <p>Email: Jessyhurbain[@]gmail.com</p>
-        <p>Tél : 06.38.35.78.63</p>
-        <nav class="navigation">
-          <span class="bouton" id="bouton_texte" onclick="javascript:afficher_cacher('home');">Home</span>
-          <span class="bouton" id="bouton_texte" onclick="javascript:afficher_cacher('texte');">Skills</span>
+        <h2 id="title_top"><i>Développeur Web / Mobile</i></h2>
+        <p id="description_top">Passioné par les technologie du web et mobiles venez découvrir mes experiences</p>
+        <div class="info">
+          <p><img src="img/icon_info/maison.png">  111 Rue Robespierre, Méricourt 62680 </p>
+          <p><img src="img/icon_info/e-mail.png">  Jessyhurbain@gmail.com</p>
+          <p><img src="img/icon_info/telephone.png">  06 38 35 78 63</p>
+        </div>
+          <span class="bouton" id="bouton_texte" onclick="javascript:afficher_cacher('home');">Acceuil</span>
+          <span class="bouton" id="bouton_texte" onclick="javascript:afficher_cacher('texte');">Compétences</span>
           <span class="bouton" id="bouton_texte" onclick="javascript:afficher_cacher('texte2');">Formation</span>
           <span class="bouton" id="bouton_texte" onclick="javascript:afficher_cacher('texte3');">Expériences</span>
-        </nav>
       </div>
       <div id="home" class="home">
       </div>
@@ -33,7 +31,7 @@
     <div class="border"></div>
     <div id="middle_content">
       <div id="texte" class="texte">
-        <h1 class="big_title">Skills</h1>
+        <h1 class="big_title">Compétences</h1>
         <ul class="list">
           <li class="cadre">
             <p class="title">HTML/CSS
@@ -134,8 +132,8 @@
           </li>
         </ul>
       </div>
-      <div id="bottom-content">
-        <h1 class="big_title">Contact me</h1>
+      <div id="bottom_content">
+        <h1 class="big_title">Contact</h1>
         <ul class="list">
           <li class="cadre">
             <a href="https://www.facebook.com/jessy.hurbain">
