Optimisation du code css et rectification des erreurs du W3C checker

--- a/index.html
+++ b/index.html
@@ -4,26 +4,27 @@
   <meta charset="utf-8">
   <link href="style.css" type="text/css" rel="stylesheet">
   <script type="text/javascript" src="js/main.js"></script>
+  <title>Mon CV</title>
 </head>
 <body>
   <div id="main">
     <div id="top_content">
       <div id="picture">
-        <img src="img/photo_profile.jpg" />
+        <img src="img/photo_profile.jpg" alt="photo_profile" />
       </div>
       <div id="resume_top">
         <h1 class="big_title">Hurbain Jessy</h1>
         <h2 id="title_top"><i>Développeur Web / Mobile</i></h2>
         <p id="description_top">Passioné par les technologie du web et mobiles venez découvrir mes experiences</p>
         <div class="info">
-          <p><img src="img/icon_info/maison.png">  111 Rue Robespierre, Méricourt 62680 </p>
-          <p><img src="img/icon_info/e-mail.png">  Jessyhurbain@gmail.com</p>
-          <p><img src="img/icon_info/telephone.png">  06 38 35 78 63</p>
+          <p><img src="img/icon_info/maison.png" alt="adresse">  111 Rue Robespierre, Méricourt 62680 </p>
+          <p><img src="img/icon_info/e-mail.png" alt="e-mail">  Jessyhurbain@gmail.com</p>
+          <p><img src="img/icon_info/telephone.png" alt="telephone">  06 38 35 78 63</p>
         </div>
           <span class="bouton" id="bouton_texte" onclick="javascript:afficher_cacher('home');">Acceuil</span>
-          <span class="bouton" id="bouton_texte" onclick="javascript:afficher_cacher('texte');">Compétences</span>
-          <span class="bouton" id="bouton_texte" onclick="javascript:afficher_cacher('texte2');">Formation</span>
-          <span class="bouton" id="bouton_texte" onclick="javascript:afficher_cacher('texte3');">Expériences</span>
+          <span class="bouton" id="bouton_texte1" onclick="javascript:afficher_cacher('texte');">Compétences</span>
+          <span class="bouton" id="bouton_texte2" onclick="javascript:afficher_cacher('texte2');">Formation</span>
+          <span class="bouton" id="bouton_texte3" onclick="javascript:afficher_cacher('texte3');">Expériences</span>
       </div>
       <div id="home" class="home">
       </div>
@@ -113,14 +114,15 @@
             </p>
             <p class="description"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut
               aliquip.
-            </p>
+            </p></li>
             <li>
             <p class="title">Gardien d'immeuble
               <span class="box_exp">2010 - 2012</span>
             </p>
             <p class="description"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut
               aliquip.
-            </p></li>
+            </p>
+            </li>
             <li class="cadre">
             <p class="title">Vendageur à la tâche
               <span class="box_exp"> Saison 2012 &amp; 2013</span>
@@ -128,7 +130,6 @@
             <p class="description"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut
               aliquip.
             </p>
-            </li>
           </li>
         </ul>
       </div>
@@ -137,13 +138,13 @@
         <ul class="list">
           <li class="cadre">
             <a href="https://www.facebook.com/jessy.hurbain">
-              <img class="icon_contact" src="img/sociaux/32-facebook.png" /></a>
+              <img class="icon_contact" src="img/sociaux/32-facebook.png" alt="facebook" /></a>
             <a href="https://fr.linkedin.com/in/jessy-hurbain-732a8b107">
-              <img class="icon_contact" src="img/sociaux/32-linkedin.png" /></a>
+              <img class="icon_contact" src="img/sociaux/32-linkedin.png" alt="linkedin" /></a>
             <a href="https://twitter.com/Gamernew">
-              <img class="icon_contact" src="img/sociaux/32-twitter.png"/></a>
+              <img class="icon_contact" src="img/sociaux/32-twitter.png" alt="twitter"/></a>
             <a href="https://www.youtube.com/user/GamernewTesteur/">
-              <img class="icon_contact" src="img/sociaux/32-youtube.png" /></a>
+              <img class="icon_contact" src="img/sociaux/32-youtube.png" alt="youtube"/></a>
           </li>
         </ul>
       </div>
