--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
   <meta charset="utf-8">
   <link href="style.css" type="text/css" rel="stylesheet">
   <script type="text/javascript" src="js/main.js"></script>
-  <title>Mon CV</title>
+  <title>Hurbain Jessy</title>
 </head>
 <body>
   <div id="main">
     <div id="top_content">
       <div id="picture">
-        <img src="img/photo_profile.jpg" alt="photo_profile" />
+        <img src="img/photo_profile.jpg" alt="photo_profile">
       </div>
       <div id="resume_top">
         <h1 class="big_title">Hurbain Jessy</h1>
         <h2 id="title_top"><i>Développeur Web / Mobile</i></h2>
-        <p id="description_top">Passioné par les technologie du web et mobiles venez découvrir mes experiences</p>
+        <p id="description_top">Passionné par les technologies du web et mobile venez découvrir mes expériences</p>
         <div class="info">
           <p><img src="img/icon_info/maison.png" alt="adresse">  111 Rue Robespierre, Méricourt 62680 </p>
-          <p><img src="img/icon_info/e-mail.png" alt="e-mail">  Jessyhurbain@gmail.com</p>
+          <p><img src="img/icon_info/e-mail.png" alt="e-mail"><a href="mailto:jessyhurbain@gmail.com">  Jessyhurbain@gmail.com</a></p>
           <p><img src="img/icon_info/telephone.png" alt="telephone">  06 38 35 78 63</p>
         </div>
-          <span class="bouton" id="bouton_texte" onclick="javascript:afficher_cacher('home');">Acceuil</span>
+          <span class="bouton" id="bouton_texte" onclick="javascript:afficher_cacher('home');">Accueil</span>
           <span class="bouton" id="bouton_texte1" onclick="javascript:afficher_cacher('texte');">Compétences</span>
           <span class="bouton" id="bouton_texte2" onclick="javascript:afficher_cacher('texte2');">Formation</span>
           <span class="bouton" id="bouton_texte3" onclick="javascript:afficher_cacher('texte3');">Expériences</span>
@@ -36,26 +36,42 @@
         <ul class="list">
           <li class="cadre">
             <p class="title">HTML/CSS
-              <span class="box_exp">dev</span>
+              <span class="box_exp">2 semaines</span>
             </p>
-            <p class="description"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut
-              aliquip. Lorem ipsum dolor sit amet Consectetuer adipiscing elit Sed diam nonummy nibh euismod tincidunt laoreet dolore magna aliquam erat volutpat
+            <p class="description">
+              Structurer et mise en forme d'une page web.
             </p>
           </li>
           <li>
-            <p class="title">PHP5 &amp; MySQL
-              <span class="box_exp">dev</span>
+            <p class="title">Git
+              <span class="box_exp">3 semaines</span>
             </p>
-            <p class="description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut
-              aliquip.
+            <p class="description">
+              Gestion de version.
             </p>
           </li>
           <li class="cadre">
-            <p class="title">JAVASCRIPT &amp; jQuery ( Javascript framework )
-              <span class="box_exp">dev</span>
+            <p class="title">JAVASCRIPT
+              <span class="box_exp">1 semaine</span>
             </p>
-            <p class="description"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut
-              aliquip.
+            <p class="description">
+              Apprentissage des bases du langage.
+            </p>
+          </li>
+          <li>
+            <p class="title">GNU / Linux
+              <span class="box_exp">1 an</span>
+            </p>
+            <p class="description">
+              Maitrise générale de l'OS et des commandes bash.
+            </p>
+          </li>
+          <li class="cadre">
+            <p class="title"> Wordpress
+              <span class="box_exp">2 ans</span>
+            </p>
+            <p class="description">
+              Installation et configuration du CMS Wordpress (Plugins, SEO,etc...).
             </p>
           </li>
         </ul>
@@ -64,27 +80,25 @@
         <h1 class="big_title">Formation</h1>
         <ul class="list">
           <li class="cadre">
-            <p class="title">CAP Construction Maçonnerie Béton Armé
-              <span class="box_exp">2008 - 2009</span>
-            </p>
-            <p class="description"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut
-              aliquip. Lorem ipsum dolor sit amet Consectetuer adipiscing elit Sed diam nonummy nibh euismod tincidunt laoreet dolore magna aliquam erat volutpat
-            </p>
-          </li>
-          <li>
-            <p class="title">BEP Maintenance des Systèmes Mécaniques et automatisés (Niveau)
-              <span class="box_exp">2007</span>
-            </p>
-            <p class="description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut
-              aliquip.
-            </p>
-          </li>
-          <li class="cadre">
             <p class="title">Pop School (Développeur Web &amp; Mobile )
               <span class="box_exp">2015 - 2016</span>
             </p>
-            <p class="description"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut
-              aliquip.
+            <p class="description">Formation sur le dévelopement Web &amp; Mobile .
+            </p>
+          </li>
+          <li>
+            <p class="title">CAP Construction Maçonnerie Béton Armé
+              <span class="box_exp">2008 - 2009</span>
+            </p>
+            <p class="description">Formation au centre IEP la vie active d'avion dans le cadre du métier maçon.
+            </p>
+          </li>
+          <li class="cadre">
+            <p class="title">BEP Maintenance des Systèmes Mécaniques et automatisés (Niveau)
+              <span class="box_exp">2007</span>
+            </p>
+            <p class="description">
+              Étude des systèmes mécaniques et automatisés au lycée Auguste béhal à Lens.
             </p>
           </li>
         </ul>
@@ -93,43 +107,61 @@
         <h1 class="big_title">Expériences Professionnels</h1>
         <ul class="list">
           <li class="cadre">
-            <p class="title">Apprenti Carreleur
-              <span class="box_exp">2005</span>
+            <p class="title">Trieur de pomme de terre
+              <span class="box_exp">Saison 2014 &amp; 2015</span>
             </p>
-            <p class="description"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut
-              aliquip. Lorem ipsum dolor sit amet Consectetuer adipiscing elit Sed diam nonummy nibh euismod tincidunt laoreet dolore magna aliquam erat volutpat
+            <p class="description">Ouvrier saisonnier.
             </p>
           </li>
           <li>
-            <p class="title">Ouvrier de maintenance
-              <span class="box_exp">2006</span>
+            <p class="title">Agent de maintenance voirie
+              <span class="box_exp">2013 - 2014</span>
             </p>
-            <p class="description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut
-              aliquip.
+            <p class="description">Entretien et maintenance de la voirie de la ville de Méricourt.
             </p>
           </li>
           <li class="cadre">
-            <p class="title">Maçon
-              <span class="box_exp">2015 - 2016</span>
+            <p class="title">Vendageur à la tâche
+              <span class="box_exp">Saison 2012 &amp; 2013  </span>
             </p>
-            <p class="description"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut
-              aliquip.
+            <p class="description">Ouvrier saisonnier
+
             </p></li>
             <li>
-            <p class="title">Gardien d'immeuble
-              <span class="box_exp">2010 - 2012</span>
+            <p class="title">Gardien d'immeuble Maçon
+              <span class="box_exp">2010 - 2012 </span>
             </p>
-            <p class="description"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut
-              aliquip.
+            <p class="description">Entretien et Gestion des locaux pour ICF à Avion.
             </p>
             </li>
             <li class="cadre">
-            <p class="title">Vendageur à la tâche
-              <span class="box_exp"> Saison 2012 &amp; 2013</span>
+            <p class="title">Maçon
+              <span class="box_exp"> 2009</span>
+
             </p>
-            <p class="description"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut
-              aliquip.
+            <p class="description">
+              Stages de 3 mois dans différentes entreprises.
+
+              <ol>Ets EGML à Méricourt (Stage d'un mois)</ol>
+              <ol>SARL CTR à Rouvroy (Stage d'un mois)</ol>
+              <ol>Ets Hurbain à Méricourt (Stage d'un mois)</ol>
             </p>
+          </li>
+          <li>
+          <p class="title">Ouvrier de maintenance
+            <span class="box_exp">2006</span>
+          </p>
+          <p class="description">
+            Méca Stamp International à Billy-Montigny (stage de 15 jours).
+          </p>
+          </li>
+          <li class="cadre">
+          <p class="title">Apprenti Carreleur
+            <span class="box_exp"> 2005</span>
+          </p>
+          <p class="description">
+            Stage de une semaine en tant qu'ouvrier Sté Mako Concept Carrelage à Henin-Beaumont.
+          </p>
           </li>
         </ul>
       </div>
@@ -138,18 +170,17 @@
         <ul class="list">
           <li class="cadre">
             <a href="https://www.facebook.com/jessy.hurbain">
-              <img class="icon_contact" src="img/sociaux/32-facebook.png" alt="facebook" /></a>
+              <img class="icon_contact" src="img/sociaux/32-facebook.png" alt="facebook"></a>
             <a href="https://fr.linkedin.com/in/jessy-hurbain-732a8b107">
-              <img class="icon_contact" src="img/sociaux/32-linkedin.png" alt="linkedin" /></a>
+              <img class="icon_contact" src="img/sociaux/32-linkedin.png" alt="linkedin"></a>
             <a href="https://twitter.com/Gamernew">
-              <img class="icon_contact" src="img/sociaux/32-twitter.png" alt="twitter"/></a>
+              <img class="icon_contact" src="img/sociaux/32-twitter.png" alt="twitter"></a>
             <a href="https://www.youtube.com/user/GamernewTesteur/">
-              <img class="icon_contact" src="img/sociaux/32-youtube.png" alt="youtube"/></a>
+              <img class="icon_contact" src="img/sociaux/32-youtube.png" alt="youtube"></a>
           </li>
         </ul>
       </div>
     </div>
   </div>
 </body>
-
 </html>
